; ModuleID = '/home/carl/AnghaBench/redis/src/extr_listpack.c_lpAppend.c'
source_filename = "/home/carl/AnghaBench/redis/src/extr_listpack.c_lpAppend.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@LP_BEFORE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @lpAppend(i8* %0, i8* %1, i32 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  %9 = load i8*, i8** %4, align 8
  %10 = call i32 @lpGetTotalBytes(i8* %9)
  store i32 %10, i32* %7, align 4
  %11 = load i8*, i8** %4, align 8
  %12 = load i32, i32* %7, align 4
  %13 = sext i32 %12 to i64
  %14 = getelementptr inbounds i8, i8* %11, i64 %13
  %15 = getelementptr inbounds i8, i8* %14, i64 -1
  store i8* %15, i8** %8, align 8
  %16 = load i8*, i8** %4, align 8
  %17 = load i8*, i8** %5, align 8
  %18 = load i32, i32* %6, align 4
  %19 = load i8*, i8** %8, align 8
  %20 = load i32, i32* @LP_BEFORE, align 4
  %21 = call i8* @lpInsert(i8* %16, i8* %17, i32 %18, i8* %19, i32 %20, i32* null)
  ret i8* %21
}

declare dso_local i32 @lpGetTotalBytes(i8*) #1

declare dso_local i8* @lpInsert(i8*, i8*, i32, i8*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
